# BaYin

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  NowPlayingPage.css  NowPlayingPage.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  watcher.rs
src-tauri/src/audio_engine/: decoder.rs  dsp.rs  engine.rs  fft.rs  http_source.rs  mod.rs  output.rs  resampler.rs
src-tauri/src/commands/: audio.rs  db.rs  mod.rs  navidrome.rs  online_lyrics.rs  scan.rs  scanner.rs  streaming.rs
src-tauri/src/db/: albums.rs  init.rs  mod.rs  servers.rs  songs.rs
src-tauri/src/models/: mod.rs  navidrome.rs  scan.rs  song.rs  streaming.rs
src-tauri/src/utils/: audio.rs  cover.rs  jellyfin.rs  mod.rs  navidrome.rs  subsonic.rs
